Added a loading animation

--- a/summarium-frontend/summarium.html
+++ b/summarium-frontend/summarium.html
@@ -43,6 +43,7 @@
             </svg>
             <span class="mt-2 text-base leading-normal">Select an Audio file</span>
             <input type='file' accept="audio/*" class="hidden " id="upload"/>
+          <div class="loading"><img src="https://media1.giphy.com/media/Qc8UoA7NJqx70SfiCL/giphy.gif?cid=790b761197650f9e79643f74848538b88091e09a8f23df6e&rid=giphy.gif&ct=g" alt="Loading" ></div>
         </label>
         </form>
       </div>
